--- a/index.html
+++ b/index.html
@@ -9,34 +9,28 @@
     <!-- Add DIVS for clock, clock-face and hands-->
 </body>
 <script>
-  // Select SECOND hand from the DOM 
-  const segundero = document.querySelector(".second-hand");
-  // Select MINUTE hand from the DOM 
-  // Select HOUR hand from the DOM 
 
   // Create function to handle clock behavior
-  function setDate() {
+  const setDate = function() {
+    // Select SECOND hand from the DOM 
+    // Select MINUTE hand from the DOM 
+    // Select HOUR hand from the DOM 
+
     // Create a New Date Object
-    const now = new Date();
-    
+
     // Use a method to get seconds from new object
-    const segundos = now.getSeconds();
     // Convert seconds to degrees
-    const segundosGrados = ((segundos / 60) * 360) + 90;
     // Rotate second hand according to current time
-    segundero.style.transform = `rotate(${segundosGrados}deg)`;
-    
+
     // Use a method to get minutes from new object
     // Convert minute to degrees
     // Rotate minute hand according to current time
 
     // Use a method to get hours from new object
     // Convert hours to degrees
-    // Rotate minute hand according to current time
+    // Rotate hour hand according to current time
   }
 
-  // Call steDate() function every second
-  setInterval(setDate, 1000);
-
+  // Execute function every second
 </script>
 </html>
